<resources>
    <string name="payze_card_amount">Amount</string>
    <string name="payze_card_number">Number</string>
    <string name="payze_card_expires">Expires</string>
    <string name="payze_card_holder">Card Holder Name</string>
    <string name="payze_card_holder_hint">Name</string>
    <string name="payze_card_sec_code">Security Code</string>
    <string name="payze_card_number_invalid">Invalid Card Number</string>
    <string name="payze_card_exp_invalid">Card is expired</string>
    <string name="payze_card_sec_invalid">CVV is Invalid</string>
    <string name="payze_card_name_invalid">Invalid Card Holder Name</string>
    <string name="payze_error_title">Something went wrong…</string>
    <string name="payze_error_message">An unknown error occurred. Please try again later.</string>
    <string name="payze_card_title">Enter Card</string>
    <string name="payze_web_title">Verification</string>
    <string name="payze_card_next">Next</string>
    <string name="payze_card_close">Close</string>
</resources>